--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,6 @@
         <div id="main">
             <div ng-view></div>
         </div>
-        <script src="js/main.entry.js"></script>
+        <script src="assets/js/main.entry.js"></script>
     </body>
 </html>
