--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
         <title>Node Authentication Demo</title>
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+        <link rel="stylesheet" href="assets/css/main.css">
         <style>
             body {
                 padding-top:80px;
