--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,9 @@
         <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Node Authentication Demo</title>
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+        <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
         <link rel="stylesheet" href="assets/css/main.css">
-        <style>
-            body {
-                padding-top:80px;
-            }
-        </style>
     </head>
     <body>
         <div id="main">
